added media for header

--- a/Heroku/Heroku_Add-ons/index.html
+++ b/Heroku/Heroku_Add-ons/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/fontStyle.css">
     <link rel="stylesheet" href="./styles/headerStyle.css">
+    <link rel="stylesheet" href="./styles/media.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
@@ -30,7 +32,7 @@
                             <img src="https://elements.heroku.com/assets/logo-c23865d5508ad41e5d964c3c786d7116718fe4f405118e46fc15f1ec1ec352df.svg" alt="altImg">
                         </a>
                     </div>
-                    <li class="navLi">
+                    <li class="navLi2">
                         <div class="navContainer">
                             <a class="navLink" href="https://www.heroku.com/products">Produkts</a>
                             <div class="navDrop">
@@ -59,11 +61,14 @@
                         </form>
                     </div>
                     <a class="navLink" href="">Log in</a>
-                    <span style="color:#9377b3; font-size: 16px; font-weight: 400;">or</span>
+                    <span class="regSpan" style="color:#9377b3; font-size: 16px; font-weight: 400;">or</span>
                     <div class="signUpWrap">
                         <a class="navLink" href="">Sign up</a>
                     </div>
                 </div>
+                <a class="toolsBars" href="">
+                    <i class="fa-solid fa-bars" style="color: #f1f2f4;"></i>
+                </a>
             </div>
             <div class="brandLogo">
             </div>
