added adoptive,java and howers

--- a/Heroku/Heroku_Add-ons/index.html
+++ b/Heroku/Heroku_Add-ons/index.html
@@ -29,7 +29,8 @@
                 <div class="mainNawWrap">
                     <div class="logo">
                         <a href="">
-                            <img src="https://elements.heroku.com/assets/logo-c23865d5508ad41e5d964c3c786d7116718fe4f405118e46fc15f1ec1ec352df.svg" alt="altImg">
+                            <img src="https://elements.heroku.com/assets/logo-c23865d5508ad41e5d964c3c786d7116718fe4f405118e46fc15f1ec1ec352df.svg"
+                                alt="altImg">
                         </a>
                     </div>
                     <li class="navLi2">
@@ -70,10 +71,12 @@
                     <i class="fa-solid fa-bars" style="color: #f1f2f4;"></i>
                 </a>
             </div>
-            <div class="brandLogo">
+            <div class="logoWrapp">
+                <div class="brandLogo">
+                </div>
+                <h1 class="mainTitle">Heroku Add-ons</h1>
+                <h5 class="ourTools">Tools and services for developing, extending, and operating your app.</h5>
             </div>
-            <h1 class="mainTitle">Heroku Add-ons</h1>
-            <h5 class="ourTools">Tools and services for developing, extending, and operating your app.</h5>
         </section>
     </header>
     <main>
@@ -96,9 +99,51 @@
                 </a>
             </div>
         </section>
+        <section class="ourProducts">
+            <div class="producstWrapper">
+                <div class="productsList">
+                    <div class="productsListTitle">
+                        <h5 class="productTitle">add-ons categories</h5>
+                    </div>
+                    <a class="productNavLink" id="data_stores" href="#itemContainer1">Data Stores</a>
+                    <a class="productNavLink" id="data_utilites" href="#itemContainer2">Data Store Utilttes</a>
+                    <a class="productNavLink" href="">Monitoring</a>
+                    <a class="productNavLink" href="">Logging</a>
+                </div>
+                <div class="productsItems">
+                    <div class="productsTitleWrapp" id="itemContainer1">
+                        <h2 class="productItemTitle">Data Stores</h2>
+                        <span class="productsItemSpan">Choose where to store your data.</span>
+                    </div>
+                    <hr>
+                    <div class="productsItemWrapp" >
+                        <div class="produktItem">
+                            <div class="itemlogo"></div>
+                            <h6 class="itemTitle">Stackhero for InfluxDB</h6>
+                            <div class="divideBar"></div>
+                            <p class="itemText">InfluxDB on dedicated instances, up-to-date versions and attractive prices.</p>
+                        </div>
+                    </div>
+                    <div class="productsTitleWrapp" id="itemContainer2">
+                        <h2 class="productItemTitle">Data Stores</h2>
+                        <span class="productsItemSpan">Choose where to store your data.</span>
+                    </div>
+                    <hr>
+                    <div class="productsItemWrapp">
+                        <div class="produktItem">
+                            <div class="itemlogo"></div>
+                            <h6 class="itemTitle">Stackhero for InfluxDB</h6>
+                            <div class="divideBar"></div>
+                            <p class="itemText">InfluxDB on dedicated instances, up-to-date versions and attractive prices.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
 <script src="https://kit.fontawesome.com/8ccdee7cf0.js" crossorigin="anonymous"></script>
+<script src="./scripts/script.js"></script>
 
 </html>
