added links to produktItem

--- a/Heroku/Heroku_Add-ons/index.html
+++ b/Heroku/Heroku_Add-ons/index.html
@@ -116,12 +116,15 @@
                         <span class="productsItemSpan">Choose where to store your data.</span>
                     </div>
                     <hr>
-                    <div class="productsItemWrapp" >
+                    <div class="productsItemWrapp">
                         <div class="produktItem">
-                            <div class="itemlogo"></div>
-                            <h6 class="itemTitle">Stackhero for InfluxDB</h6>
-                            <div class="divideBar"></div>
-                            <p class="itemText">InfluxDB on dedicated instances, up-to-date versions and attractive prices.</p>
+                            <a href="" class="produktLink">
+                                <div class="itemlogo"></div>
+                                <h6 class="itemTitle">Stackhero for InfluxDB</h6>
+                                <div class="divideBar"></div>
+                                <p class="itemText">InfluxDB on dedicated instances, up-to-date versions and attractive
+                                    prices.</p>
+                            </a>
                         </div>
                     </div>
                     <div class="productsTitleWrapp" id="itemContainer2">
@@ -134,7 +137,8 @@
                             <div class="itemlogo"></div>
                             <h6 class="itemTitle">Stackhero for InfluxDB</h6>
                             <div class="divideBar"></div>
-                            <p class="itemText">InfluxDB on dedicated instances, up-to-date versions and attractive prices.</p>
+                            <p class="itemText">InfluxDB on dedicated instances, up-to-date versions and attractive
+                                prices.</p>
                         </div>
                     </div>
                 </div>
