--- a/Template_projekt/index.html
+++ b/Template_projekt/index.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    <div class="main"></div>
+    <section class="header">
+        <div class="headerWrap">
+            <div class="headerContainer">
+                <div class="logoWrap">
+                    <div class="logoImg"></div>
+                    <h2 class="logoName"></h2>
+                </div>
+                <div class="linkWrap">
+                    <a href="" class="navLinks"></a>
+                    <a href="" class="navLinks"></a>
+                    <a href="" class="navLinks"></a>
+                    <a href="" class="navLinks"></a>
+                    <a href="" class="navLinks"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sitySlider">
+        <div class="sitySliderWrap">
+            <div class="slider" id="firstSlider">
+
+            </div>
+        </div>
+    </section>
+    <section class="ourSpecials">
+        <div class="oruSpecialsContainer">
+            <div class="specialsWrap">
+                <p class="desclabel">Наши услуги</p>
+                <h2 class="sectionTitle">Мы специализируемся</h2>
+                <div class="productWrap">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="aboutUs">
+        <div class="aboutWrap">
+            <div class="aboutContainer">
+                <div class="aboutInfo">
+                    <p class="desclabel">
+                        О нас
+                    </p>
+                    <h2 class="sectionTitle">
+                        Компания
+                    </h2>
+                    <h2 class="companyName">
+                        
+                    </h2>
+                    <p class="aboutText">
+                    </p>
+                </div>
+                <div class="aboutProducts">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="partners">
+        <div class="partnersSliderWrapp">
+            <div class="specialSlider" id="secondSlider">
+
+            </div>
+        </div>
+    </section>
+
 </body>
 <script src="./scripts/index.js"></script>
+
 </html>
